# DQN-LunarLander-FastAPI-Streamlit

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA_info_best_HP.ipynb  Training_model.ipynb
src/api/: main.py  schemas.py
src/app/: app.py  dashboard.py  interface.py
src/model/: model_service.py
src/scripts/: extract_logs.py
